[package]
authors = ['Dmitry Bryuhanov <dmitrii_bryuhanov@mail.ru>']
description = 'FRAME pallet template for defining custom runtime logic.'
edition = '2018'
homepage = 'https://xp.network'
license = 'Unlicense'
name = 'move-cp-pallet'
version = '3.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

# alias "parity-scale-code" to "codec"
[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2.0.0'

[dependencies]
frame-support = { default-features = false, version = '3.0.0' }
frame-system = { default-features = false, version = '3.0.0' }
sp-std = { default-features = false, version = '3.0.0' }
sp-core = { default-features = false, version = '3.0.0' }
serde = { version = "1.0.119"  }
xp-compiler = { git = "https://github.com/xp-network/xp-compiler/", branch = "main" }
move-compiler = { git = "https://github.com/xp-network/move-compiler/" }
hex = "0.4.3"

[dev-dependencies]
serde = { version = "1.0.119" }
sp-core = { default-features = false, version = '3.0.0' }
sp-io = { default-features = false, version = '3.0.0' }
sp-runtime = { default-features = false, version = '3.0.0' }

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
	'sp-std/std',
    'frame-system/std',
]
