[package]
authors = ['Dmitry Bryuhanov <dmitrii_bryuhanov@mail.ru>']
description = 'FRAME pallet template for defining custom runtime logic.'
edition = '2018'
homepage = 'https://xp.network'
license = 'Unlicense'
name = 'move-cp-pallet'
version = '3.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
serde = { version = "1.0.119"  }
xp-compiler = { git = "https://github.com/xp-network/xp-compiler/", branch = "main" }
move-compiler = { git = "https://github.com/xp-network/move-compiler/", default-features = false }
hex = "0.4.3"


[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
	'sp-std/std',
    'frame-system/std',
]

[dependencies.sp-std]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = 'rococo-v1'
version = '3.0.0'

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2.0.0'

[dependencies.frame-benchmarking]
default-features = false
optional = true
git = 'https://github.com/paritytech/substrate.git'
branch = 'rococo-v1'
version = '3.0.0'

[dependencies.frame-support]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'rococo-v1'
version = '3.0.0'

[dependencies.frame-system]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'rococo-v1'
version = '3.0.0'

[dependencies.sp-core]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'rococo-v1'
version = '3.0.0'

[dev-dependencies]
serde = { version = "1.0.119" }

[dev-dependencies.sp-io]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'rococo-v1'
version = '3.0.0'

[dev-dependencies.sp-runtime]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'rococo-v1'
version = '3.0.0'
